# flights-monitor

./: .gitignore  README.md  app.py  pyproject.toml
constants/: __init__.py  ads_exchange.py  constants.py  open_sky_api.py
database/: db.py  db_init.py
database/tables/: __init__.py  aircraft.py  airline.py  airport.py  country.py  fleet.py  flight.py  flight_schedule.py  flight_status.py  flight_status_flag.py
db/: db_init.py
db/tables/: __init__.py  aircraft.py  airline.py  airport.py  country.py  fleet.py
docs/: openapi.yaml
endpoints/: __init__.py
endpoints/airport/: airport.py
endpoints/country/: country.py
scripts/: airport_icao_extract.py  fill_aircraft_table.py  fill_airline_table.py  fill_airport_coordinates.py  fill_airport_table.py  fill_country_table.py  monitor_fleet.py  monitor_flight_status.py  monitor_flights.py  plane_icao_extract.py
scripts/schedules/: common.py  lot.md  ryanair.md  wizzair.md
scripts/schedules/AEE/: endpoint.md  schedule.py
scripts/schedules/BAW/: endpoint.md  schedule.py
scripts/schedules/EIN/: endpoint.md  schedule.py
scripts/schedules/EOK/: endpoint.md  schedule.py
scripts/schedules/LOT/: endpoint.md  schedule.py  secrets.py.back
scripts/schedules/RYR/: endpoint.md  schedule.py
scripts/schedules/WZZ/: endpoint.md  schedule.py
utils/: open_sky_api_dataclasses.py  time_to_seconds.py
