[tool.black]
line-length = 120
target-version = ['py39']

[tool.poetry]
name = "flights-monitor"
version = "0.0.1"
description = ""
authors = ["thisi5patrick"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.28.0"
selenium = "^4.2.0"
SQLAlchemy = "^1.4.37"

[tool.poetry.dev-dependencies]
black = "^22.3.0"
isort = "^5.10.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
